cmake_minimum_required(VERSION 2.8.4)
project(tgbook)

# ADD_SUBDIRECTORY (3rd-party/googletest)
ADD_SUBDIRECTORY(3rd-party/cpr)
ADD_SUBDIRECTORY(src/app)
ADD_SUBDIRECTORY(src/lib)
#enable_testing()
#include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
set(Boost_USE_MULTITHREADED ON)
